# proimg

./: .gitignore  128n_12i.py  128n_4i.py  128n_8i.py  256n_12i.py  256n_4i.py  256n_8i.py  512n_12i.py  512n_4i.py  512n_8i.py  64n_12i.py  64n_4i.csv  64n_4i.py  64n_8i.py  Makefile  README.md  TODO.txt  asp_main.lp  ba_1024n_12i.py  ba_1024n_4i.py  ba_1024n_8i.py  ba_128n_12i.py  ba_128n_4i.py  ba_256n_12i.py  ba_256n_4i.py  ba_256n_8i.py  ba_512n_12i.csv  ba_512n_12i.py  ba_512n_4i.py  ba_512n_8i.py  ba_64n_12i.py  ba_64n_4i.csv  ba_64n_4i.py  ba_64n_8i.py  bat_1024n_12i.py  bat_1024n_4i.py  bat_1024n_8i.py  bat_128n_12i.py  bat_128n_4i.py  bat_128n_8i.py  (+58 more)
bat_results/: bat_1024n_12i.csv  bat_1024n_4i.csv  bat_1024n_8i.csv  bat_128n_12i.csv  bat_128n_4i.csv  bat_128n_8i.csv  bat_256n_12i.csv  bat_256n_4i.csv  bat_256n_8i.csv  bat_512n_12i.csv  bat_512n_4i.csv  bat_512n_8i.csv  bat_64n_12i.csv  bat_64n_4i.csv  bat_64n_8i.csv
encodings/: README.md  asp_main.lp  asp_main_continuous.lp  cr.pl  heuristic.pl  input.pl  lp_cr.pl  lp_heuristic.pl  lp_main.pl  main.pl  main_orig.pl
example_inputs/: images.lp  infrastructure.lp
exp1 - asp vs heu/: e1_125n_12i.csv  e1_25n_4i.csv  e1_25n_8i.csv
exp2 - asp vs declace/: sim_100n_12i.csv  sim_100n_8i.csv  sim_125n_12i.csv  sim_125n_8i.csv  sim_150n_8i.csv  sim_25n_12i.csv  sim_25n_8i.csv  sim_50n_12i.csv  sim_50n_8i.csv  sim_75n_12i.csv
experimental_results/: ba_128nodes_12images.csv  ba_128nodes_4images.csv  ba_128nodes_8images.csv  ba_256nodes_4images.csv
experiments/: GNOSIS_experiments.txt  README.md  experiments.py  (+5 more)
(+176 files in other folders)
